# SupplyChain

./: README.md
docs/: database.md  dataset.md  javaBackend.md  supply_chain_localhost-2026_06_08_09_25_27-data.sql  tables.sql
frontend/supply-chain/: README.md  package-lock.json  package.json  vite.config.ts
frontend/supply-chain/src/: App.vue  auto-import.ts
frontend/supply-chain/src/components/: category.vue  customer.vue  department.vue  home.vue  order.vue  orderItems.vue  product.vue
frontend/supply-chain/src/global/: frame.vue  variables.ts
frontend/supply-chain/src/router/: index.ts
frontend/supply-chain/src/stores/: CategoryTable.ts  CustomerTable.ts  DepartmentTable.ts  OrderItemsTable.ts  OrderTable.ts  ProductTable.ts
frontend/supply-chain/src/types/: ResponseResult.ts  ResultPage.ts  category.ts  customer.ts  department.ts  order.ts  orderItems.ts  product.ts
frontend/supply-chain/src/utils/: categoryAxios.ts  customerAxios.ts  departmentAxios.ts  orderAxios.ts  orderItemsAxios.ts  productAxios.ts
javabackend/supply_chain/: .gitignore  pom.xml
javabackend/supply_chain/src/main/java/com/supply_chain/: SupplyChainApplication.java
javabackend/supply_chain/src/main/java/com/supply_chain/configuration/: CorsConfig.java  MybatisPlusConfiguration.java
javabackend/supply_chain/src/main/java/com/supply_chain/vo/: Result.java  (+3 more)
javabackend/supply_chain/src/main/resources/: application.yml
javabackend/supply_chain/src/test/java/com/supply_chain/: SupplyChainApplicationTests.java
supply-chain-analytics-engine/: pyproject.toml  requirements.txt
(+55 files in other folders)
