[project]
name = "supply-chain-analytics-engine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "black>=26.5.1",
    "fastapi>=0.136.3",
    "notebook>=7.5.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "pymysql>=1.2.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
